added squad player selection

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,8 +2,10 @@
 
 .App {
   @extend .themColors;
+  @include flexCenter();
 
   width: 100%;
   height: 100vh;
   background-color: var(--primeColorBg);
+  color: var(--primeColorText);
 }
