--- a/src/components/leagues/createSquad/createSquad.module.scss
+++ b/src/components/leagues/createSquad/createSquad.module.scss
@@ -112,4 +112,26 @@
     text-decoration: none;
     color: var(--primeColorText);
   }
+  .doneBtn {
+    // margin-top: 25px;
+    height: 10vh;
+    padding: 10px;
+    @include flexCenter();
+    p {
+      margin-bottom: 20px;
+      text-align: center;
+      padding: 5px 20px;
+      font-weight: bold;
+      font-size: 24px;
+      background-color: blue;
+      border-radius: 10px;
+      cursor: pointer;
+      &:hover {
+        opacity: 0.5;
+      }
+      &:active {
+        opacity: 0;
+      }
+    }
+  }
 }
