--- a/src/components/leagues/leaguesCont/leaguesCont.module.scss
+++ b/src/components/leagues/leaguesCont/leaguesCont.module.scss
@@ -8,8 +8,8 @@
   .squads {
     margin-top: 15px;
     @include flexCenter(column);
-    flex-grow: 1;
-    width: 100%;
+    // flex-grow: 1;
+    width: 80%;
     p {
       font-weight: bold;
     }
@@ -19,8 +19,11 @@
     font-weight: bold;
     padding: 10px;
     border-radius: 10px;
-    margin-top: 30px;
+    margin: 30px;
     cursor: pointer;
+  }
+  .squadCount {
+    margin-top: 10px;
   }
   .listCont {
     margin-top: 20px;
