--- a/src/components/leagues/leaguesCont/squad/squad.module.scss
+++ b/src/components/leagues/leaguesCont/squad/squad.module.scss
@@ -20,7 +20,7 @@
     text-align: center;
     grid-gap: 10px;
 
-    p {
+    div {
       font-weight: 400;
       font-size: 16px;
       @include flexCenter();
